feat: add responsiveness

--- a/pages/blogs/are-you-a-product-engineer/are-you-a-product-engineer.mdx
+++ b/pages/blogs/are-you-a-product-engineer/are-you-a-product-engineer.mdx
@@ -257,26 +257,20 @@ Happy coding!
 
 </div>
 
-<br />
-<br />
 <div className={styles.linkSection}>
-  Links for reference: 1. Definition of
-  [Merchant](https://en.wikipedia.org/wiki/Merchant) 2. Definition of
-  [Conversion](https://support.google.com/analytics/answer/6086209?hl=en) 3.
-  What are [Google Ads](https://ads.google.com/intl/en_in/home/)? 4. Definition
-  of [Campaign](https://ads.google.com/intl/en_in/home/) 5. What are [A/B
-  experiments](https://www.optimizely.com/optimization-glossary/ab-testing/)? 6.
-  Feature
-  [rollout](https://www.optimizely.com/optimization-glossary/feature-rollout/#:~:text=A%20feature%20rollout%20is%20the,bundled%20together%2C%20and%20then%20monitored.)
-  7. [Google optimize](https://marketingplatform.google.com/about/optimize/) 8.
-  [Optimizely](https://www.optimizely.com/products/intelligence/web-experimentation/)
-  9. [Metrics](https://support.optimizely.com/hc/en-us/articles/4410289407885)
-  in Optmizely 10. Introduction to
-  [Funnels](https://www.optimizesmart.com/the-geek-guide-to-understanding-funnels-in-google-analytics/#0-introduction-to-funnels-in-google-analytics)
-  11. Why
-  [SEO](https://www.searchenginejournal.com/why-seo-is-important-for-business/248101/)
-  is important? 12. [Operational
-  Excellence](https://www.iteratorshq.com/blog/ultimate-guide-to-operational-excellence/)
+  Links for reference:
+  1. Definition of [Merchant](https://en.wikipedia.org/wiki/Merchant)
+  2. Definition of [Conversion](https://support.google.com/analytics/answer/6086209?hl=en)
+  3. What are [Google Ads](https://ads.google.com/intl/en_in/home/)?
+  4. Definition of [Campaign](https://ads.google.com/intl/en_in/home/)
+  5. What are [A/B experiments](https://www.optimizely.com/optimization-glossary/ab-testing/)?
+  6. Feature [rollout](https://www.optimizely.com/optimization-glossary/feature-rollout/#:~:text=A%20feature%20rollout%20is%20the,bundled%20together%2C%20and%20then%20monitored.)
+  7. [Google optimize](https://marketingplatform.google.com/about/optimize/)
+  8. [Optimizely](https://www.optimizely.com/products/intelligence/web-experimentation/)
+  9. [Metrics](https://support.optimizely.com/hc/en-us/articles/4410289407885) in Optmizely
+  10. Introduction to [Funnels](https://www.optimizesmart.com/the-geek-guide-to-understanding-funnels-in-google-analytics/#0-introduction-to-funnels-in-google-analytics)
+  11. Why [SEO](https://www.searchenginejournal.com/why-seo-is-important-for-business/248101/) is important?
+  12. [Operational Excellence](https://www.iteratorshq.com/blog/ultimate-guide-to-operational-excellence/)
   13. Bonus: [The Event Segmentation chart: an overview –
   Amplitude](https://help.amplitude.com/hc/en-us/articles/360033852251-The-Event-Segmentation-chart-an-overview?wvideo=i4dgi1oxd3)
 </div>
