fix: colors, font sizes

--- a/pages/blogs/are-you-a-product-engineer/are-you-a-product-engineer.mdx
+++ b/pages/blogs/are-you-a-product-engineer/are-you-a-product-engineer.mdx
@@ -36,7 +36,7 @@ So by showing Razorpay at the top in the search recommendations and by having th
 
 Once a user finds Razorpay via a search engine or advertisement etc. and lands on the brand [website](https://razorpay.com), we can proudly say that we have reached the first step to convince the user to buy our product, and when they buy our product, they will be converted to our customer. In our words, we could say [conversion](https://support.google.com/analytics/answer/6086209?hl=en) is done for the user.
 
-#### \*(The actual meaning of the term conversion varies from business to business. In some cases, when the user starts paying for the product, it could be called a conversion. To keep it simple, let’s assume when the user signs up, we will call it a **_conversion_** )\*
+#### *(The actual meaning of the term conversion varies from business to business. In some cases, when the user starts paying for the product, it could be called a conversion. To keep it simple, let’s assume when the user signs up, we will call it a **_conversion_** )*
 
 <img
   src="/user-funnel.png"
