fix: update links to add target="_blank"

--- a/pages/blogs/are-you-a-product-engineer/are-you-a-product-engineer.mdx
+++ b/pages/blogs/are-you-a-product-engineer/are-you-a-product-engineer.mdx
@@ -14,7 +14,7 @@ Product Engineering is a very vast term, and it can be divided into smaller term
 
 ## Why a Product Engineering team?
 
-Bringing in more users to use the product is every company’s goal because it drives revenue. The meaning of a user varies from company to company. For SaaS companies like AWS, the developers are the users and for product companies, like Razorpay, end customers are the users. Let’s take the example of Razorpay. For Razorpay’s payment gateway team, the [merchants](https://en.wikipedia.org/wiki/Merchant) who opt for Razorpay’s Payment Gateway are the users. So, the company tries to bring in more users by solving their payment problems, and providing a better payment solution is company’s one of many products.
+Bringing in more users to use the product is every company’s goal because it drives revenue. The meaning of a user varies from company to company. For SaaS companies like AWS, the developers are the users and for product companies, like Razorpay, end customers are the users. Let’s take the example of Razorpay. For Razorpay’s payment gateway team, the <a href="https://en.wikipedia.org/wiki/Merchant" target="_blank">merchants </a> who opt for Razorpay’s Payment Gateway are the users. So, the company tries to bring in more users by solving their payment problems, and providing a better payment solution is company’s one of many products.
 
 So most companies have a dedicated team to strategize on how to bring more revenue. These teams include sales, marketing, design, product, and engineering folks. These folks do thorough market research, look at the competitors and bring in new ideas to acquire more users.
 
@@ -28,13 +28,13 @@ For this team, users are very important. So it takes care of everything about th
 
 Let's take an example of Razorpay to understand the user journey.
 
-In the case of Razorpay, the user’s journey begins by searching the payment gateway in a browser. An interested user would click on this link and land on their [website](https://razorpay.com).
+In the case of Razorpay, the user’s journey begins by searching the payment gateway in a browser. An interested user would click on this link and land on their <a href="https://razorpay.com" target="_blank">website </a>.
 
 <img src="/search-result.png" alt="Search Result" className={styles.mdxImage} />
 
 So by showing Razorpay at the top in the search recommendations and by having the relevant content on the website, one can target the right and more quality users. A lot of marketing, sales, and business teams’ brains are involved in keeping Razorpay at the top in the search. Also, apart from search engines, users can come via advertisements and marketing campaigns. Generally, all this is handled by a separate charter involving engineering, product, and marketing
 
-Once a user finds Razorpay via a search engine or advertisement etc. and lands on the brand [website](https://razorpay.com), we can proudly say that we have reached the first step to convince the user to buy our product, and when they buy our product, they will be converted to our customer. In our words, we could say [conversion](https://support.google.com/analytics/answer/6086209?hl=en) is done for the user.
+Once a user finds Razorpay via a search engine or advertisement etc. and lands on the brand <a href="https://razorpay.com" target="_blank">website </a>, we can proudly say that we have reached the first step to convince the user to buy our product, and when they buy our product, they will be converted to our customer. In our words, we could say <a href="https://support.google.com/analytics/answer/6086209?hl=en" target="_blank">conversion </a> is done for the user.
 
 #### *(The actual meaning of the term conversion varies from business to business. In some cases, when the user starts paying for the product, it could be called a conversion. To keep it simple, let’s assume when the user signs up, we will call it a **_conversion_** )*
 
@@ -55,7 +55,9 @@ To drive conversion, first, you have to understand the kind of users the company
 
 There could be multiple ways a user can land on the company’s website. Let's take an example of Razorpay:
 
-- The user could be coming from [advertisements](https://ads.google.com/intl/en_in/home/) and [campaigns](https://support.google.com/google-ads/answer/6304?hl=en) running on LinkedIn, Facebook, Twitter, or any other social platform. We will call it a **social user**.
+- The user could be coming from <a href="https://ads.google.com/intl/en_in/home/" target="_blank">advertisements </a> and
+<a href="https://support.google.com/google-ads/answer/6304?hl=en" target="_blank">campaigns </a>
+running on LinkedIn, Facebook, Twitter, or any other social platform. We will call it a **social user**.
 
 <img
   src="/advertisement.png"
@@ -73,9 +75,9 @@ There could be multiple ways a user can land on the company’s website. Let's t
 />
 ##### *(Example of an advertisement on Google search)*
 
-- A user may have heard about Razorpay and directly searched it on a search engine and landed on [razorpay.com](http://razorpay.com). We will call it an **organic user**.
+- A user may have heard about Razorpay and directly searched it on a search engine and landed on <a href="https://razorpay.com" target="_blank">razorpay.com </a>. We will call it an **organic user**.
 
-- A user may have the link to the [razorpay.com](https://razorpay.com) website and directly landed on the website. We will call it a **direct user**
+- A user may have the link to the <a href="https://razorpay.com" target="_blank">razorpay.com </a> website and directly landed on the website. We will call it a **direct user**
 
 Some companies also use the term _leads_ or _candidates_ and the terms may vary from company to company.
 
@@ -101,19 +103,19 @@ So let’s say we already have a button on our website which says `Sign Up Now` 
 
 ##### _(This is just for reference. This does not exist on razorpay.com. Well, I updated the DOM via inspect)_
 
-But we are not sure whether users would be interested to click on this banner whether users who will click on this banner and land on our signup module will actually create an account and whether our theory is correct about adding a banner and driving conversion. (Because there is a possibility that some users may find it very annoying and leave the website after seeing the banner). In order to validate our theory that the banner will actually increase signup, we will do an experiment/test with our idea. We call it an **A/B experiment**. There would be two versions of the experiments. Version A would be without the banner and version B would be with the banner. We will be writing our code in such a way that our code would support two versions of the UI (one with a banner and one without a banner). And we will set that version A would run for 90% of users and version B would run for the rest 10% (There are [tools](https://marketingplatform.google.com/about/optimize/) available to help in setting up the experiments.). By looking at the data, a winner is chosen based on which version converted more users.
+But we are not sure whether users would be interested to click on this banner whether users who will click on this banner and land on our signup module will actually create an account and whether our theory is correct about adding a banner and driving conversion. (Because there is a possibility that some users may find it very annoying and leave the website after seeing the banner). In order to validate our theory that the banner will actually increase signup, we will do an experiment/test with our idea. We call it an **A/B experiment**. There would be two versions of the experiments. Version A would be without the banner and version B would be with the banner. We will be writing our code in such a way that our code would support two versions of the UI (one with a banner and one without a banner). And we will set that version A would run for 90% of users and version B would run for the rest 10% (There are <a href="https://marketingplatform.google.com/about/optimize/" target="_blank">tools </a> available to help in setting up the experiments.). By looking at the data, a winner is chosen based on which version converted more users.
 
 <div className={styles.bonus}>
 
     > Bonus:
 
-    > Why an [A/B experiment](https://www.optimizely.com/optimization-glossary/ab-testing/)?
+    > Why an <a href="https://www.optimizely.com/optimization-glossary/ab-testing/" target="_blank">A/B experiments </a>?
 
-    > - Rather than showing a new feature to all the users without validating a theory, it is always better to experiment with the idea first. In the experiment, you can show the new feature to a small set of random users and get feedback. If the users respond positively, you move forward and show the feature to all the users. We can also use the term progressive [rollout](https://www.optimizely.com/optimization-glossary/feature-rollout/#:~:text=A%20feature%20rollout%20is%20the,bundled%20together%2C%20and%20then%20monitored.) in this case.
+    > - Rather than showing a new feature to all the users without validating a theory, it is always better to experiment with the idea first. In the experiment, you can show the new feature to a small set of random users and get feedback. If the users respond positively, you move forward and show the feature to all the users. We can also use the term progressive <a href="https://www.optimizely.com/optimization-glossary/feature-rollout/#:~:text=A%20feature%20rollout%20is%20the,bundled%20together%2C%20and%20then%20monitored" target="_blank">rollout </a> in this case.
 
     > - A/B experiments also act as a runtime switch in cases where the users did not like the feature at all and your theory fails, and you want to revert back to the older version of your code(without this feature). You can quickly do it by changing a few things in the tool used for the A/B experiment. This would take less time than reverting your code from your CI/CD.
 
-    > You can check out [Google Optimize](https://marketingplatform.google.com/about/optimize/), [Optimizely](https://www.optimizely.com/products/intelligence/web-experimentation/), or any client-side A/B experiment tool for this.
+    > You can check out <a href="https://marketingplatform.google.com/about/optimize/" target="_blank">Google Optimize </a>, <a href="https://www.optimizely.com/products/intelligence/web-experimentation/" target="_blank">Optimizely </a>, or any client-side A/B experiment tool for this.
 
 </div>
 
@@ -170,7 +172,8 @@ After we launch our experiment as an A/B, we would have one experiment running w
 
 _See, it's so easy to create meaning out of the events_
 
-When these events are accumulated in a meaningful way, it could be called a [metric](https://support.optimizely.com/hc/en-us/articles/4410289407885). We can then create our entire [funnel](https://www.optimizesmart.com/the-geek-guide-to-understanding-funnels-in-google-analytics/#0-introduction-to-funnels-in-google-analytics) through the metrics data and after accumulating the data over a period of time and visualizing it in the form of a graph, a winner can be chosen.
+When these events are accumulated in a meaningful way, it could be called a <a href="https://support.optimizely.com/hc/en-us/articles/4410289407885" target="_blank">metric </a>.
+We can then create our entire <a href="https://www.optimizesmart.com/the-geek-guide-to-understanding-funnels-in-google-analytics/#0-introduction-to-funnels-in-google-analytics" target="_blank">funnel </a> through the metrics data and after accumulating the data over a period of time and visualizing it in the form of a graph, a winner can be chosen.
 
 <img
   src="/graph.png"
@@ -217,14 +220,14 @@ If you are joining a Product team in any company, you could expect the following
 - Understanding which users to target and how
 - Suggesting ways to improve the conversion
 - More involvement with the product, marketing, and design team
-- Understanding [SEO](https://www.searchenginejournal.com/why-seo-is-important-for-business/248101/) as SEO will make your company visible and can bring in more users
+- Understanding <a href="https://www.searchenginejournal.com/why-seo-is-important-for-business/248101/" target="_blank">SEO</a> as SEO will make your company visible and can bring in more users
 - Understanding about performance
 - Web page performance
 - API performance
 - Reducing down time
 - Understanding of the frontend ecosystem (of course because you need to code)
 - Ownership of testing and taking the feature live (involves understanding of writing test cases, deployments, CI/CD, AWS, etc.)
-- Thinking about observability and [operational excellence](https://www.iteratorshq.com/blog/ultimate-guide-to-operational-excellence/). This involves thinking in terms of
+- Thinking about observability and <a href="https://www.iteratorshq.com/blog/ultimate-guide-to-operational-excellence/" target="_blank">operational excellence</a>. This involves thinking in terms of
     - Tracking of Metrics
     - Setting up proper alerting and monitoring for your system.
         - This alerting can be specific to API downtime, code issues, drop-offs, etc.
@@ -259,18 +262,18 @@ Happy coding!
 
 <div className={styles.linkSection}>
   Links for reference:
-  1. Definition of [Merchant](https://en.wikipedia.org/wiki/Merchant)
-  2. Definition of [Conversion](https://support.google.com/analytics/answer/6086209?hl=en)
-  3. What are [Google Ads](https://ads.google.com/intl/en_in/home/)?
-  4. Definition of [Campaign](https://ads.google.com/intl/en_in/home/)
-  5. What are [A/B experiments](https://www.optimizely.com/optimization-glossary/ab-testing/)?
-  6. Feature [rollout](https://www.optimizely.com/optimization-glossary/feature-rollout/#:~:text=A%20feature%20rollout%20is%20the,bundled%20together%2C%20and%20then%20monitored.)
-  7. [Google optimize](https://marketingplatform.google.com/about/optimize/)
-  8. [Optimizely](https://www.optimizely.com/products/intelligence/web-experimentation/)
-  9. [Metrics](https://support.optimizely.com/hc/en-us/articles/4410289407885) in Optmizely
-  10. Introduction to [Funnels](https://www.optimizesmart.com/the-geek-guide-to-understanding-funnels-in-google-analytics/#0-introduction-to-funnels-in-google-analytics)
-  11. Why [SEO](https://www.searchenginejournal.com/why-seo-is-important-for-business/248101/) is important?
-  12. [Operational Excellence](https://www.iteratorshq.com/blog/ultimate-guide-to-operational-excellence/)
-  13. Bonus: [The Event Segmentation chart: an overview –
-  Amplitude](https://help.amplitude.com/hc/en-us/articles/360033852251-The-Event-Segmentation-chart-an-overview?wvideo=i4dgi1oxd3)
+  1. Definition of <a href="https://en.wikipedia.org/wiki/Merchant" target="_blank">Merchant </a>
+  2. Definition of <a href="https://support.google.com/analytics/answer/6086209?hl=en" target="_blank">Conversion </a>
+  3. What are <a href="https://ads.google.com/intl/en_in/home/" target="_blank">Google Ads </a>?
+  4. Definition of <a href="https://support.google.com/google-ads/answer/6304?hl=en" target="_blank">Campaign </a>
+  5. What are <a href="https://www.optimizely.com/optimization-glossary/ab-testing/" target="_blank">A/B experiments </a>?
+  6. Feature <a href="https://www.optimizely.com/optimization-glossary/feature-rollout/#:~:text=A%20feature%20rollout%20is%20the,bundled%20together%2C%20and%20then%20monitored" target="_blank">rollout </a>
+  7. <a href="https://marketingplatform.google.com/about/optimize/" target="_blank">Google optimize </a>
+  8. <a href="https://www.optimizely.com/products/intelligence/web-experimentation/" target="_blank">Optimizely </a>
+  9. <a href="https://support.optimizely.com/hc/en-us/articles/4410289407885" target="_blank">Metrics </a> in Optmizely
+  10. Introduction to <a href="https://www.optimizesmart.com/the-geek-guide-to-understanding-funnels-in-google-analytics/#0-introduction-to-funnels-in-google-analytics" target="_blank">Funnels </a>
+  11. Why <a href="https://www.searchenginejournal.com/why-seo-is-important-for-business/248101/" target="_blank">SEO </a>is important?
+  12. <a href="https://www.iteratorshq.com/blog/ultimate-guide-to-operational-excellence/" target="_blank">Operational Excellence</a>
+  13. Bonus: <a href="https://help.amplitude.com/hc/en-us/articles/360033852251-The-Event-Segmentation-chart-an-overview?wvideo=i4dgi1oxd3" target="_blank">The Event Segmentation chart: an overview –
+                                                                                                                   Amplitude</a>
 </div>
