--- a/mdx/promise-chaining.mdx
+++ b/mdx/promise-chaining.mdx
@@ -3,21 +3,8 @@ import CodeBlock from "../components/CodeBlock";
 
 # Promise Chaining
 <br/>
-## What is a Promise?
 
-A **`Promise`** is an object that represents the eventual completion or failure of an asynchronous operation and its resulting value. It is a way to handle asynchronous operations in a more structured and manageable manner.
-
-*For more on promises, refer to the MDN [link](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise).*
-
-<br/>
-## What is Promise Chaining?
-
-Chaining of multiple promises together to execute them one after another in a specific order is called Promise Chaining.
-
-<br/>
-### Let’s start with an example:
-
-Consider there are 3 async functions (`asyncFn1`, `asyncFn2`, `asyncFn3`) returning some values.
+Consider there are 3 functions (`asyncFn1`, `asyncFn2`, `asyncFn3`).
 
 
 <CodeBlock code={
@@ -25,30 +12,30 @@ Consider there are 3 async functions (`asyncFn1`, `asyncFn2`, `asyncFn3`) return
     // Function definition
 
     type Callback = (error: Error | null, data: any) => void;
-    type AsyncFunc = (callback: Callback, data: any) => void;
+    type AsyncCallback = (callback: Callback, data: any) => void;
 
-    const asyncFn1: AsyncFunc = (callback, num) => {
+    const asyncFn1: AsyncCallback = (callback, num) => {
         setTimeout(() => callback(null, num * 2), 100)
     };
 
-    const asyncFn2: AsyncFunc = (callback, num) => {
+    const asyncFn2: AsyncCallback = (callback, num) => {
         setTimeout(() => callback(null, num * 3), 100)
     };
 
-    const asyncFn3: AsyncFunc = (callback, num) => {
+    const asyncFn3: AsyncCallback = (callback, num) => {
         setTimeout(() => callback(null, num * 7), 100)
     };
 `
 }/>
 
 <br/>
-We have to create a function called `sequence()` which chains up these async functions.
+We have to create a function called `sequence()` which chains up these functions.
 
 Something like:
 
 <CodeBlock code={
     `
-    const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+    const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         // Your code here
     }
 
@@ -60,16 +47,16 @@ Something like:
 `
 }/>
 
-It accepts `AsyncFunc` array, and chain them up by passing new data to the next `AsyncFunc` via  `Callback`.
+It accepts `AsyncCallback` array, and chain them up by passing new data to the next `AsyncCallback` via  `Callback`.
 
 <br/>
 Let's dig into it.
 
-Let's break down the problem statement. We know that `sequence()` accepts a array of functions and return another `AsyncFunc` function.
+Let's break down the problem statement. We know that `sequence()` accepts a array of functions and return another `AsyncCallback` function.
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function(callback, data){
             // Your code here
         }
@@ -82,7 +69,7 @@ Because the params are an array of functions, we would need to loop them over.
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
          return function(callback, data){
             let index = 0;
             // some loop
@@ -98,7 +85,7 @@ Tricky part is once the `funcs[0]` (which is `asyncFn1`) calls the Callback with
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function(callback, initialData){
 
             let index = 0;
@@ -123,7 +110,7 @@ And the `nextCallback()` is gonna do the same. Take the data and pass to the nex
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function(callback, initialData){
             let index = 0;
             const nextCallback = (data: number) => {
@@ -158,7 +145,7 @@ As the functions don’t return promises, let first make then return a Promise f
 
 <CodeBlock code={
     `
-     const promisify = (fn: AsyncFunc): Function => {
+     const promisify = (fn: AsyncCallback): Function => {
         return function (defaultData: number): Promise {
             return new Promise((resolve, reject) => {
                 fn((error, data) => {
@@ -192,7 +179,7 @@ Now lets convert all functions to promisified Functions.
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function (callback, initialData) {
             const promisifiedFuncs = funcs.map((fn) => promisify(fn));
         }
@@ -205,7 +192,7 @@ Now we have to loop over `promisifiedFuncs` and pass the resolved data to the ne
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function (callback, initialData) {
             const promisifiedFuncs = funcs.map((fn) => promisify(fn));
 
@@ -224,7 +211,7 @@ Hmm… 🤔
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function (callback, initialData) {
             const promisifiedFuncs = funcs.map((fn) => promisify(fn));
 
@@ -243,7 +230,7 @@ Why not create an initial promise with resolve data (initialData) and then chain
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function (callback, initialData) {
             const promisifiedFuncs = funcs.map((fn) => promisify(fn));
 
@@ -262,7 +249,7 @@ Let's consume the data/error from the promise.
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function (callback, initialData) {
             const promisifiedFuncs = funcs.map((fn) => promisify(fn));
 
@@ -294,7 +281,7 @@ The same can be solved with async/await
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return async function(callback, initialData) {
             const promisifiedFns = funcs.map((fn) => promisify(fn));
             try {
@@ -316,7 +303,7 @@ With `reduce` and `async/await`
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function(callback, initialData) {
             const promisifiedFns = funcs.map((fn) => promisify(fn));
             const initPromise = Promise.resolve(initialData);
@@ -341,7 +328,7 @@ With `reduce` and `Promises`
 
 <CodeBlock code={
     `
-     const sequence = (funcs: AsyncFunc[]): AsyncFunc => {
+     const sequence = (funcs: AsyncCallback[]): AsyncCallback => {
         return function(callback, initialData) {
 
             const promisifiedFns = funcs.map((fn) => promisify(fn));
@@ -367,5 +354,5 @@ With `reduce` and `Promises`
     - The above problem statement is using the concept of <a href="https://whatthefuck.is/composition" target="_blank">Composition </a>
     - <a href="https://bigfrontend.dev/problem/implement-async-helper-sequence" target="_blank">Link</a> to the original question
     - More on <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise" target="_blank">Promises </a>
-
+    - More on <a href="https://developer.mozilla.org/en-US/docs/Glossary/Callback_function" target="_blank">Callback functions</a>
 </div>
